--- a/themes/dalibert/scss/base/_typography.scss
+++ b/themes/dalibert/scss/base/_typography.scss
@@ -21,9 +21,12 @@
 // Styleguide 1.1
 
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800);
+@import url(https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css);
 
 // Fonts
 $fontDefault: "Open Sans", Helvetica, Arial, sans-serif;
+
+$icon : "FontAwesome";
 
 // Font Weights
 $thin: 100;
