--- a/themes/dalibert/scss/components/_home_block.scss
+++ b/themes/dalibert/scss/components/_home_block.scss
@@ -47,7 +47,7 @@
   .featured-box {
     &:hover {
       .views-field-title a {
-        color: darken($pink, 20);
+        color: darken($blue, 20);
         @include transition(all, 0.3s, ease);
       }
       img {
@@ -55,6 +55,32 @@
         filter: grayscale(50%);
         @include transition(all, 0.3s, ease);
       }
+    }
+  }
+  .more-link {
+    text-align: center;
+    padding: 20px;
+    a {
+      padding: 10px;
+      border: solid 1px $blue;
+      &:after {
+        content: "\f105";
+        font-family: $icon;
+        padding-left: 10px;
+      }
+    }
+  }
+}
+
+#block-restaurant {
+  height: auto;
+  overflow: hidden;
+  .parralax-block-content {
+    padding: 20px;
+    .parralax-block-content-text {
+      background: rgba($black, 0.7);
+      color: $white;
+      padding: 10px;
     }
   }
 }
