--- a/themes/dalibert/scss/components/_links.scss
+++ b/themes/dalibert/scss/components/_links.scss
@@ -6,12 +6,12 @@
 // <a href="#">Sample Link</a>
 
 a {
-  color: $pink;
+  color: $blue;
   transition: .5s;
   text-decoration: none;
   @include transition(all, 0.3s, ease);
   &:hover {
-    color: darken($pink, 20);
+    color: darken($blue, 20);
     @include transition(all, 0.3s, ease);
   }
   &:visited {
