--- a/themes/dalibert/scss/components/_home_block.scss
+++ b/themes/dalibert/scss/components/_home_block.scss
@@ -84,3 +84,12 @@
     }
   }
 }
+
+#block-views-block-categorie-blog-block-1 {
+  @include center;
+  .views-row {
+    display: inline-block;
+    width: 25%;
+    min-width: 200px;
+  }
+}
